crates/strz-analysis/tests/snapshots/workspace_index__workspace_index@deployment_navigation.snap
---
source: crates/strz-analysis/tests/workspace_index.rs
expression: "WorkspaceIndexSetView::from_facts(&facts, &fixture_root)"
---
WorkspaceIndexSetView {
    document_instances: [
        DocumentInstanceView {
            document: "workspace.dsl",
            instance_ids: [
                0,
            ],
        },
    ],
    merged_semantic_diagnostics: [],
    instances: [
        WorkspaceIndexView {
            id: 0,
            root_document: "workspace.dsl",
            documents: [
                "workspace.dsl",
            ],
            workspace_symbols: [
                WorkspaceSymbolView {
                    canonical_key: "api",
                    root_document: "workspace.dsl",
                    source_document: "workspace.dsl",
                    symbol: "workspace.dsl::api",
                },
                WorkspaceSymbolView {
                    canonical_key: "apiInstance",
                    root_document: "workspace.dsl",
                    source_document: "workspace.dsl",
                    symbol: "workspace.dsl::apiInstance",
                },
                WorkspaceSymbolView {
                    canonical_key: "gateway",
                    root_document: "workspace.dsl",
                    source_document: "workspace.dsl",
                    symbol: "workspace.dsl::gateway",
                },
                WorkspaceSymbolView {
                    canonical_key: "live",
                    root_document: "workspace.dsl",
                    source_document: "workspace.dsl",
                    symbol: "workspace.dsl::live",
                },
                WorkspaceSymbolView {
                    canonical_key: "primary",
                    root_document: "workspace.dsl",
                    source_document: "workspace.dsl",
                    symbol: "workspace.dsl::primary",
                },
                WorkspaceSymbolView {
                    canonical_key: "secondary",
                    root_document: "workspace.dsl",
                    source_document: "workspace.dsl",
                    symbol: "workspace.dsl::secondary",
                },
                WorkspaceSymbolView {
                    canonical_key: "secondaryApiInstance",
                    root_document: "workspace.dsl",
                    source_document: "workspace.dsl",
                    symbol: "workspace.dsl::secondaryApiInstance",
                },
                WorkspaceSymbolView {
                    canonical_key: "system",
                    root_document: "workspace.dsl",
                    source_document: "workspace.dsl",
                    symbol: "workspace.dsl::system",
                },
            ],
            unique_element_bindings: [
                (
                    "api",
                    "workspace.dsl::api",
                ),
                (
                    "system",
                    "workspace.dsl::system",
                ),
            ],
            duplicate_element_bindings: [],
            unique_relationship_bindings: [],
            duplicate_relationship_bindings: [],
            reference_resolutions: [
                ReferenceResolutionView {
                    reference: "workspace.dsl::api@9:48",
                    status: "resolved workspace.dsl::api",
                },
                ReferenceResolutionView {
                    reference: "workspace.dsl::gateway@10:20",
                    status: "resolved workspace.dsl::gateway",
                },
                ReferenceResolutionView {
                    reference: "workspace.dsl::this@10:31",
                    status: "resolved workspace.dsl::apiInstance",
                },
                ReferenceResolutionView {
                    reference: "workspace.dsl::system@12:39",
                    status: "resolved workspace.dsl::system",
                },
                ReferenceResolutionView {
                    reference: "workspace.dsl::api@15:57",
                    status: "resolved workspace.dsl::api",
                },
                ReferenceResolutionView {
                    reference: "workspace.dsl::primary@18:12",
                    status: "resolved workspace.dsl::primary",
                },
                ReferenceResolutionView {
                    reference: "workspace.dsl::secondary@18:23",
                    status: "resolved workspace.dsl::secondary",
                },
                ReferenceResolutionView {
                    reference: "workspace.dsl::gateway@19:12",
                    status: "resolved workspace.dsl::gateway",
                },
                ReferenceResolutionView {
                    reference: "workspace.dsl::secondaryApiInstance@19:23",
                    status: "resolved workspace.dsl::secondaryApiInstance",
                },
            ],
            semantic_diagnostics: [],
        },
    ],
}
