crates/strz-analysis/tests/snapshots/workspace_index__workspace_index@duplicate_bindings.snap
---
source: crates/strz-analysis/tests/workspace_index.rs
expression: "WorkspaceIndexSetView::from_facts(&facts, &fixture_root)"
---
WorkspaceIndexSetView {
    document_instances: [
        DocumentInstanceView {
            document: "alpha.dsl",
            instance_ids: [
                0,
            ],
        },
        DocumentInstanceView {
            document: "beta.dsl",
            instance_ids: [
                0,
            ],
        },
        DocumentInstanceView {
            document: "workspace.dsl",
            instance_ids: [
                0,
            ],
        },
    ],
    merged_semantic_diagnostics: [
        DiagnosticView {
            document: "alpha.dsl",
            code: "semantic.repeated-workspace-section",
            message: "multiple model sections are not permitted in a DSL definition",
            span: TextSpan {
                start_byte: 0,
                end_byte: 46,
                start_point: TextPoint {
                    row: 0,
                    column: 0,
                },
                end_point: TextPoint {
                    row: 2,
                    column: 1,
                },
            },
        },
        DiagnosticView {
            document: "alpha.dsl",
            code: "semantic.duplicate-binding",
            message: "duplicate element binding: api",
            span: TextSpan {
                start_byte: 12,
                end_byte: 44,
                start_point: TextPoint {
                    row: 1,
                    column: 4,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 36,
                },
            },
        },
        DiagnosticView {
            document: "beta.dsl",
            code: "semantic.repeated-workspace-section",
            message: "multiple model sections are not permitted in a DSL definition",
            span: TextSpan {
                start_byte: 0,
                end_byte: 45,
                start_point: TextPoint {
                    row: 0,
                    column: 0,
                },
                end_point: TextPoint {
                    row: 2,
                    column: 1,
                },
            },
        },
        DiagnosticView {
            document: "beta.dsl",
            code: "semantic.duplicate-binding",
            message: "duplicate element binding: api",
            span: TextSpan {
                start_byte: 12,
                end_byte: 43,
                start_point: TextPoint {
                    row: 1,
                    column: 4,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 35,
                },
            },
        },
        DiagnosticView {
            document: "workspace.dsl",
            code: "semantic.ambiguous-reference",
            message: "ambiguous element reference: api (multiple bindings match)",
            span: TextSpan {
                start_byte: 119,
                end_byte: 122,
                start_point: TextPoint {
                    row: 6,
                    column: 16,
                },
                end_point: TextPoint {
                    row: 6,
                    column: 19,
                },
            },
        },
    ],
    instances: [
        WorkspaceIndexView {
            id: 0,
            root_document: "workspace.dsl",
            documents: [
                "workspace.dsl",
                "alpha.dsl",
                "beta.dsl",
            ],
            workspace_symbols: [
                WorkspaceSymbolView {
                    canonical_key: "api",
                    root_document: "workspace.dsl",
                    source_document: "alpha.dsl",
                    symbol: "alpha.dsl::api",
                },
                WorkspaceSymbolView {
                    canonical_key: "api",
                    root_document: "workspace.dsl",
                    source_document: "beta.dsl",
                    symbol: "beta.dsl::api",
                },
                WorkspaceSymbolView {
                    canonical_key: "user",
                    root_document: "workspace.dsl",
                    source_document: "workspace.dsl",
                    symbol: "workspace.dsl::user",
                },
            ],
            unique_element_bindings: [
                (
                    "user",
                    "workspace.dsl::user",
                ),
            ],
            duplicate_element_bindings: [
                (
                    "api",
                    [
                        "alpha.dsl::api",
                        "beta.dsl::api",
                    ],
                ),
            ],
            unique_relationship_bindings: [],
            duplicate_relationship_bindings: [],
            reference_resolutions: [
                ReferenceResolutionView {
                    reference: "workspace.dsl::user@6:8",
                    status: "resolved workspace.dsl::user",
                },
                ReferenceResolutionView {
                    reference: "workspace.dsl::api@6:16",
                    status: "ambiguous-duplicate",
                },
            ],
            semantic_diagnostics: [
                DiagnosticView {
                    document: "alpha.dsl",
                    code: "semantic.repeated-workspace-section",
                    message: "multiple model sections are not permitted in a DSL definition",
                    span: TextSpan {
                        start_byte: 0,
                        end_byte: 46,
                        start_point: TextPoint {
                            row: 0,
                            column: 0,
                        },
                        end_point: TextPoint {
                            row: 2,
                            column: 1,
                        },
                    },
                },
                DiagnosticView {
                    document: "alpha.dsl",
                    code: "semantic.duplicate-binding",
                    message: "duplicate element binding: api",
                    span: TextSpan {
                        start_byte: 12,
                        end_byte: 44,
                        start_point: TextPoint {
                            row: 1,
                            column: 4,
                        },
                        end_point: TextPoint {
                            row: 1,
                            column: 36,
                        },
                    },
                },
                DiagnosticView {
                    document: "beta.dsl",
                    code: "semantic.repeated-workspace-section",
                    message: "multiple model sections are not permitted in a DSL definition",
                    span: TextSpan {
                        start_byte: 0,
                        end_byte: 45,
                        start_point: TextPoint {
                            row: 0,
                            column: 0,
                        },
                        end_point: TextPoint {
                            row: 2,
                            column: 1,
                        },
                    },
                },
                DiagnosticView {
                    document: "beta.dsl",
                    code: "semantic.duplicate-binding",
                    message: "duplicate element binding: api",
                    span: TextSpan {
                        start_byte: 12,
                        end_byte: 43,
                        start_point: TextPoint {
                            row: 1,
                            column: 4,
                        },
                        end_point: TextPoint {
                            row: 1,
                            column: 35,
                        },
                    },
                },
                DiagnosticView {
                    document: "workspace.dsl",
                    code: "semantic.ambiguous-reference",
                    message: "ambiguous element reference: api (multiple bindings match)",
                    span: TextSpan {
                        start_byte: 119,
                        end_byte: 122,
                        start_point: TextPoint {
                            row: 6,
                            column: 16,
                        },
                        end_point: TextPoint {
                            row: 6,
                            column: 19,
                        },
                    },
                },
            ],
        },
    ],
}
